force-app/main/default/objects/Service_Timecard__c/Service_Timecard__c.object-meta.xml
<CustomObject>
    <description>Log the amount of hours worked on a particular development case. You can track the type of service that you performed, the date of service, and add notes as needed. Each Service Timecard should be associated with the relevant case.</description>
    <label>Service Timecard</label>
    <nameField>
        <displayFormat>SVC-{0000000}</displayFormat>
        <label>Service Timecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Timecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>