force-app/main/default/objects/Service_Timecard__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Enter the # of hours worked for this specific task.</description>
    <inlineHelpText>Enter the # of hours worked for this specific task.</inlineHelpText>
    <label>Hours Worked</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>