force-app/main/default/objects/Service_Timecard__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Enter any notes about the task that will help identify what work was done.</description>
    <inlineHelpText>Enter any notes about the task that will help identify what work was done.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>