force-app/main/default/objects/Service_Timecard__c/fields/Release_Management_Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Release_Management_Task_Category__c</fullName>
    <description>Choose the task detail that best fits the type of work done.</description>
    <inlineHelpText>Choose the task detail that best fits the type of work done.</inlineHelpText>
    <label>Task Category Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Requirement Analysis</fullName>
            </value>
            <value>
                <fullName>Coding</fullName>
            </value>
            <value>
                <fullName>Unit Testing</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Transition to QA team</fullName>
            </value>
            <value>
                <fullName>Bug Fixing</fullName>
            </value>
            <value>
                <fullName>Configuration Changes</fullName>
            </value>
            <value>
                <fullName>Deployment Validation</fullName>
                <label>Deployment Validation Fixes</label>
            </value>
            <value>
                <fullName>Test case design</fullName>
            </value>
            <value>
                <fullName>Test execution</fullName>
            </value>
            <value>
                <fullName>Defect logging and Verification</fullName>
            </value>
            <value>
                <fullName>Test artifacts review</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Knowledge Transfer/Trainings</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>