force-app/main/default/objects/Service_Timecard__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY ()</defaultValue>
    <description>Choose the start time for the work task.</description>
    <inlineHelpText>Choose the start time for the work task.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>