force-app/main/default/objects/Service_Timecard__c/listViews/AllServiceTimecards.listView-meta.xml
<ListView>
    <fullName>AllServiceTimecards</fullName>
    <columns>Task_Category__c</columns>
    <columns>Case__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Hours_Worked__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Timecards</label>
    <language>en_US</language>
</ListView>